# speed_tester

./: .gitignore  CMakeLists.txt  README.md  temp.txt  todo.txt
include/: conversions.hpp  curlfunctions.hpp  servers.hpp  sockets.hpp
src/: conversions.cpp  curlfunctions.cpp  main.cpp  servers.cpp  sockets.cpp  test_ws1
